[package]

name = "hematite"
version = "0.0.31"
license = "MIT"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["minecraft", "piston", "client"]
description = "A simple Minecraft client"
repository = "https://github.com/PistonDevelopers/hematite.git"
homepage = "http://hematite.piston.rs"
exclude = ["home/*"]

[profile.release]
opt-level = 2
debug = false

[[bin]]

name = "hematite"
path = "src/main.rs"

[dependencies]
byteorder = "1.2.7"
camera_controllers = "0.26.0"
docopt = "0.6.78"
flate2 = "0.2.13"
fps_counter = "1.0.0"
gfx = "0.17.1"
gfx_core = "0.8.3"
gfx_device_gl = "0.15.3"
libc = "0.2.45"
piston = "0.39.0"
piston3d-gfx_voxel = "0.26.0"
pistoncore-glutin_window = { git = "https://gitlab.redox-os.org/redox-os/piston-glutin-window", branch = "redox" }
rustc-serialize = "0.3.24"
shader_version = "0.3.0"
vecmath = "0.3.1"
zip = "0.5.0"
